tests/ui/traits/no_send-struct.stderr
error[E0277]: `Foo` cannot be sent between threads safely
  --> $DIR/no_send-struct.rs:15:9
   |
LL |     bar(x);
   |     --- ^ `Foo` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `Foo`
note: required by a bound in `bar`
  --> $DIR/no_send-struct.rs:11:11
   |
LL | fn bar<T: Send>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
